Lire+ et icon admin corrigé

--- a/templates/elements/header.html.twig
+++ b/templates/elements/header.html.twig
@@ -45,30 +45,30 @@
         </li>
       </ul>
 
-              <div class="header-social-links d-flex">
+              <div class="header-social-links">
 
                 {% if app.user %}
                   <a class="col-md-12 dropbtn" href="{{path('app_logout')}}">
                     {% if app.user.avatar is empty %}
                       <i class="fa-solid fa-circle-user" style="color: white"></i>
 
-                    {% elseif app.user.opption is same as ('yes') %}
                       <img class="roundedImage" src="{{asset('divers/avatars/' ~ app.user.avatar)}}" style="width:25px; height:25px; border-radius:50%">&ensp;
                       <span class="zxfirstname">{{app.user.firstname|capitalize}}</span> <span class="zxlastname">{{app.user.lastname|upper}}</span>
-                      <a class="loggouts" href="{{ path('app_logout') }}"><i class="fa solid fa-power-off" style="color: white></i></a>
-                      <a class="zxadmin" href="{{path('admin')}}"><i class="fa fa-circle-play" style="color: white"></i></a>
+                      <a class="loggouts mr-2" href="{{ path('app_logout') }}"><i class="fa solid fa-power-off" style="color: white"></i></a>
+                      <a class="zxadmin mr-2" href="{{path('admin')}}"><i class="fa fa-circle-play" style="color: white"></i></a>
+                    {% elseif app.user.opption is same as ('yes') %}
 
                     {% else %}
                       <img class="roundedImage" src="{{asset('divers/avatars/' ~ app.user.avatar)}}" style="width:25px; height:25px; border-radius:50%">&ensp;
                       <span class="zxfirstname">{{app.user.firstname|capitalize}}</span> <span class="zxlastname">{{app.user.lastname|upper}}</span>
-                      <a class="loggouts" href="{{ path('app_logout') }}"><i class="fa-solid fa-power-off" style="color: white"></i></a>
-                {% endif %}
+                      <a class="loggouts" href="{{ path('app_logout') }}">&ensp;<i class="fa-solid fa-power-off" style="color: white"></i></a>
+                  {% endif %}
 
                   </a>
 
-                {% else %}
+                  {% else %}
                     <a class="" href="{{path('app_login')}}">
-                      <i class="fa-regular fa-circle-user" style="color: white"></i>
+                      <i class="fa-regular fa-circle-user" style="color: white"></i>&ensp;
                     </a>
 
                 {% endif %}
