--- a/templates/pages/carousel.html.twig
+++ b/templates/pages/carousel.html.twig
@@ -9,7 +9,7 @@
                 <h1 style="margin-top:-250px;">{{ post.title }}</h1>
                 <h4 style="margin-top:50px;">{{ post.abstract }}</h4>
                  
-                <a href="" class="btn btn-success btn-lg mt-5">Lire +</a>
+                <a href="{{path('show', {id: post.id})}}" class="btn btn-success btn-lg mt-5">Lire +</a>
             </div>
 
         </div>
